# la_taupe

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: ci.yml  release.yml
src/: analysis.rs  config.rs  lib.rs  ocr.rs  ocrs.rs  pool.rs  rib.rs  shapes.rs  tesseract.rs
src/http/: analyze.rs  server.rs
src/text/: address.rs  mod.rs  simple_account_holder.rs
src/twoddoc/: certificate_store.rs
tests/: http_tests.rs
