[package]
name = "la_taupe"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"
license-file = "LICENSE.txt"
description = "La Taupe is a tool to extract administrative data from documents."
authors = ["See git log"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-multipart = "*"
rxing = "*"
nom = "*"
chrono = { version = "*", features = ["serde"] }
p256 = "*"
x509-cert = "*"
base32 = "*"
iban_validate = "*"
itertools = "*"
image = "*"
imageproc = "*"
tempfile = "*"
log = "*"
linfa = "*"
linfa-clustering = "*"
ndarray = "*"
env_logger = "*"
regex = "*"
scraper = "*"
serde = { version = "*", features = ["derive"] }
serde-xml-rs = "*"
serde_json = "*"
tree_magic_mini = "*"
reqwest = { version = "*", features = ["json", "blocking"] }
url = "*"
ocrs = "*"
rten = "*"
leptess = "*"
tokio = { version = "*", features = ["sync", "time", "rt"] }

[dev-dependencies]
assert_cmd = "*"
static_init = "*"
serial_test = "*"
reqwest = { version = "*", features = ["multipart"] }

[package.metadata.deb]
depends = "poppler-utils, tesseract-ocr, tesseract-ocr-fra"
